改一些文案

--- a/pages/guide-page/guide-page.wxml
+++ b/pages/guide-page/guide-page.wxml
@@ -16,7 +16,7 @@
           class="submit-btn"
           bindgetphonenumber="submit"
           bindtap="submit">
-          开启知识换换
+          开启知交
       </button>
     </div>
 </div>
