--- a/pages/search-nearby/search-nearby.wxml
+++ b/pages/search-nearby/search-nearby.wxml
@@ -1,6 +1,6 @@
 <!-- 搜索附近 -->
 <div class="container search-nearby">
-    <text class="title">与附近的人配对交换知识</text>
+    <text class="title">与附近的人交流经验</text>
     <text class="content">互相学习，交个朋友</text>
     <view class="map">
     </view>
