--- a/pages/real-name/real-name.wxml
+++ b/pages/real-name/real-name.wxml
@@ -1,5 +1,5 @@
-<!-- 个人信息 -->
-<div class="container personal-info">
+<!-- 真实姓名 -->
+<div class="container real-name">
     <input class="input"
         placeholder="真实姓名"
         bindinput="nameInput"
