完成我的知识页面改造

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -53,9 +53,13 @@
     <section wx:if="{{slideList.length > 0}}" class="btn-container">
         <block wx:if="{{isFinishedInput}}">
             <div class="btn iconfont icon-close2" id="clickLeft" bindtap="slideLeft"></div>
-            <div class="btn iconfont icon-handshake icon-exchange"  bindtap="slideRight">愿意见面交流经验</div>
+            <div class="btn iconfont icon-handshake icon-exchange"  bindtap="slideRight">
+                愿意见面交流经验
+            </div>
         </block>
-        <div wx:else class="btn btn-only iconfont icon-error" bindtap="toInputPage">完善个人信息，即可开始交换</div>
+        <div wx:else class="btn btn-only iconfont icon-error" bindtap="toInputPage">
+            完善个人信息，即可开始交换
+        </div>
     </section>
 </div>
 <section class="match-bg" wx:if="{{followSuccess}}">
@@ -80,4 +84,4 @@
             继续探索
         </button>
     </div>
-  </section>
+</section>
