--- a/pages/my-knowledge/my-knowledge.wxss
+++ b/pages/my-knowledge/my-knowledge.wxss
@@ -1,85 +1,35 @@
 /** 我的知识 **/
-.real-name {
-    background: #fff;
-    padding: 0 50px;
-}
-.tip-content {
-    display: block;
-    padding: 0 15px 55px;
-    font-size: 16px;
-    line-height: 16px;
-    color: #999;
-    text-align: center;
-}
-.title {
-    display: block;
-    padding: 22px 0 12px;
-    font-size: 24px;
-    text-align: center;
-    font-weight: 700;
-}
-.content {
-    display: block;
-    padding: 0 15px 55px;
-    font-size: 16px;
-    line-height: 16px;
-    color: #333;
-    text-align: center;
-}
-.input {
-    padding-bottom: 2px;
-    margin-bottom: 24px;
-    border-bottom: 1px solid #f1f1f1;
-    text-align: left;
-    font-size: 16px;
-    /* background: #51a938; */
+.container {
+    padding: 17px;
+    font-size: 18px;
 }
 
-.input-placeholder {
-   color: #ccc;
-   font-size: 14px;
-
-}
-
-
-/*==== 文本输入域区块 ====*/
-.textarea-container {
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 90px;
-    box-sizing: border-box;
-    border: 1px solid #f1f1f1;
-    padding: 5px 10px;
-}
-.textarea-container .count {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-    font-size: 12px;
-    color: #666;
-}
-.textarea {
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    box-sizing: border-box;
+.text {
     font-size: 14px;
-    text-align: left;
+    color: #999;
+    line-height: 1em;
+}
+
+.text-multi-line {
     line-height: 24px;
 }
 
-.textarea-placeholder {
-    text-align: left;
-    font-size: 14px;
-    color: #ccc;
-    line-height: 1em;
+.input {
+    height: 58px;
+    padding: 0 20px;
+    margin: 10px 0 5px;
+    border: none;
+    border-radius: 5px;
+    background: #fff;
+    font-size: 18px;
+    line-height: 58px;
+    color: #000;
 }
-/*==== 提交按钮 ====*/
+
+.input-placeholder {
+    color: #d0d0d0;
+}
+
 .submit-btn {
-    margin: 45px 10px;
-    color: #fff;
-    border: 0;
-    background: #51a938;
+    margin-top: 110px;
 }
