添加第一次右划提示功能

--- a/pages/real-name/real-name.wxml
+++ b/pages/real-name/real-name.wxml
@@ -6,7 +6,7 @@
         value="{{realname}}"
         auto-focus/>
     <input class="input"
-        placeholder="公司职业（百度产品经理)"
+        placeholder="公司职业（产品经理)"
         bindinput="careerInput"
         value="{{career}}"/>
     <div
