在匹配页添加职位，修正openSetting系统升级

--- a/pages/matched/matched.wxml
+++ b/pages/matched/matched.wxml
@@ -11,7 +11,7 @@
         <section class="text-container">
             <header>
                 {{item.nick}}
-                <span>占位</span>
+                <span>{{item.career}}</span>
             </header>
             <footer>匹配于 {{item.time}}</footer>
         </section>
