调整入住流程

--- a/pages/guide-page/guide-page.wxss
+++ b/pages/guide-page/guide-page.wxss
@@ -15,7 +15,7 @@
     padding: 22px 0 12px;
     font-size: 24px;
     text-align: center;
-    font-weight: ，， ， ， 呼啸z7， 互相00;
+    font-weight: 600;
 }
 
 .content {
