--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -93,7 +93,7 @@
 
 .card .img-container .img-tag-left .icon-handshake {
     font-weight: 600;
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 11px;
     color: #3BCC6B;
 }
@@ -104,7 +104,7 @@
 
 .card .img-container .img-tag-right .icon-close {
     font-weight: 600;
-    font-size: 22px;
+    font-size: 30px;
     margin-bottom: 11px;
     color: #F13F40;
 }
@@ -186,9 +186,10 @@
     padding-left: 10px;
 }
 .btn-container .icon-exchange .icon-handshake {
-    font-size: 38px;
+    font-size: 26px;
     vertical-align: middle;
-    margin-right: 9px;
+    margin-right: 10px;
+    font-weight: 600;
     color: #39da74;
 }
 
@@ -218,7 +219,7 @@
 
 .match-back .icon-handshake::before {
     box-sizing: border-box;
-    font-size: 48px;
+    font-size: 32px;
     color: #3BCC6B;
     text-align: center;
     position: absolute;
